--- a/accordion01.css
+++ b/accordion01.css
@@ -24,6 +24,7 @@ body {
   line-height: 2.5rem;
   margin: 0 0 -3px 0;
   padding: 0 1rem;
+  font-weight: bold;
   color: white;
   background: linear-gradient(to bottom left, #99a9ee, #01038f);
   border-radius: 5px;
